# rust-venue-scraper

./: .dockerignore  .env.example  .gitignore  ADDING_NEW_SCRAPING_PIPELINES.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.scraper  ENTITY_LIFECYCLE.md  IMPLEMENTATION_SUMMARY.md  INGESTOR_AUDIT.md  METRICS.md  METRICS_ARCHITECTURE.md  METRICS_AUDIT_REPORT.md  METRICS_MIGRATION_PLAN.md  Makefile  PIPELINE_ARCHITECTURE_REDESIGN.md  PIPELINE_INDIVIDUAL_STEPS_TODO.md  PLATONIC_IDEAL.md  PUSHGATEWAY_FRESHNESS_IMPLEMENTATION.md  README.md  SERVER_MANAGEMENT.md  STATUS.md  WARNING_CHECKLIST.md  check_event.rs  clear_neumos.sql  config.toml  demo-local-with-monitoring.sh  demo-local.sh  demo-pipeline.sh  docker-compose-local.yml  docker-compose.yml  grafana-dashboard-dynamic.json  grafana-dashboard.json  import_dashboard.sh  monitor_metrics.sh  start_servers.sh  stop_servers.sh  test_freshness.sh  test_ingester_metrics.sh  (+3 more)
.backup/: Dockerfile.original  docker-compose.original.yml
archive/: carpenter.rs
assets/graphiql/: README.txt
docs/: ARCHITECTURE.md  METRICS.md  alive-dead-code.md  dashboard-automation.md  data_persistence_graphql_implementation.md  envelope-v1.md  graphql_roadmap.md  observability.md  persistence_sqlite.md  pipeline_debug_runbook.md  quality-gate-dashboard-integration.md
docs/rfc/: 001_ticketmaster_client.md
migrations/: 001_create_nodes_and_edges.sql  003_add_normalization_quality_gate_fields.sql
ops/: prometheus-local.yml  prometheus.local.yml  prometheus.yml
registry/schema/: source-spec.v1.json
registry/sources/: barboza.json  blue_moon.json  conor_byrne.json  darrells_tavern.json  kexp.json  neumos.json  sea_monster.json  sunset_tavern.json
schemas/: envelope.v1.json
scripts/: build-dashboard.sh  run_dev_fetch_parse.sh  update-dashboard.sh
sms-core/: Cargo.toml
sms-core/migrations/: 002_indexes_and_pragmas.sql
sms-core/src/: database.rs  lib.rs
sms-core/src/common/: constants.rs  error.rs
sms-core/src/domain/: mod.rs
sms-core/src/storage/: database.rs  in_memory.rs  traits.rs
sms-core/src/storage/database/: serialization.rs
sms-graphql/: Cargo.toml  Dockerfile
sms-graphql/src/: main.rs  server.rs
sms-graphql/src/graphql/: loaders.rs  mod.rs  schema.rs
sms-graphql/src/graphql/resolvers/: mod.rs  mutation.rs  query.rs
sms-graphql/src/graphql/types/: artist.rs  event.rs  venue.rs
sms-scraper/: Cargo.toml  Dockerfile
sms-scraper/src/: lib.rs  main.rs
sms-scraper/src/apis/: base.rs  blue_moon.rs  conor_byrne.rs  darrells_tavern.rs  factory.rs  mod.rs  sea_monster.rs  sunset_tavern.rs
sms-scraper/src/apis/parsers/: barboza.rs  blue_moon.rs  conor_byrne.rs  darrells_tavern.rs  kexp.rs  mod.rs  neumos.rs  sea_monster.rs
sms-scraper/src/app/: conflation_use_case.rs  enrich_use_case.rs  ingest_use_case.rs  mod.rs  parse_use_case.rs  quality_gate_use_case.rs
sms-scraper/src/common/: error.rs
sms-scraper/src/infra/: cadence_adapter.rs  conflation_output_adapter.rs  gateway_adapter.rs  http_client.rs  mod.rs  parser_factory.rs  payload_store.rs  rate_limiter_adapter.rs  registry_adapter.rs
sms-scraper/src/observability/: metrics.rs
sms-scraper/src/observability/metrics/: dashboard.rs
sms-scraper/src/pipeline/: full_pipeline_orchestrator.rs  mod.rs  orchestrator.rs  parquet_out.rs  pipeline.rs  pipeline_config.rs  tasks.rs  utils.rs
sms-scraper/src/pipeline/ingestion/: idempotency.rs  ingest_common.rs  ingest_log_reader.rs  rate_limiter.rs
sms-scraper/src/pipeline/ingestion/gateway/: cas_supabase.rs  ingest_log.rs  mod.rs
sms-scraper/src/pipeline/processing/: conflation.rs  enrich.rs  mod.rs  pipeline_steps.rs
sms-scraper/src/pipeline/processing/catalog/: candidate.rs  catalogger.rs  handler.rs  mapper.rs  registry.rs
sms-scraper/src/pipeline/processing/catalog/handlers/: artist.rs  event.rs  venue.rs
sms-scraper/src/pipeline/processing/normalize/: mod.rs  registry.rs
sms-scraper/src/pipeline/processing/normalize/normalizers/: barboza.rs  base.rs  blue_moon.rs  conor_byrne.rs  darrells_tavern.rs  kexp.rs  mod.rs  neumos.rs  sea_monster.rs
sms-scraper/src/pipeline/processing/parser/: mod.rs
sms-scraper/src/pipeline/processing/quality_gate/: mod.rs
sms-scraper/src/pipeline/steps/: catalog.rs  conflation.rs  enrich.rs  ingestion.rs  mod.rs  normalize.rs  parse.rs  quality_gate.rs
sms-scraper/src/pipeline/storage/: database.rs  in_memory.rs  mod.rs  traits.rs
sms-scraper/src/pipeline/storage/database/: serialization.rs
sms-scraper/src/registry/: mod.rs  source_loader.rs  unified_registry.rs
sms-web/: Cargo.toml  Dockerfile
sms-web/src/: graphql.rs  handlers.rs  main.rs  models.rs  router.rs  templates.rs
sms-web/templates/: artist.html  events_list.html  index.html  venue.html  venues_list.html
sms_core/: Cargo.toml
sms_core/src/: database.rs  domain.rs  error.rs  graphql.rs  lib.rs
src/: architecture.rs  carpenter.rs  config.rs  constants.rs  db.rs  envelope.rs  error.rs  idempotency.rs  ingest_common.rs  ingest_log_reader.rs  ingest_meta.rs  lib.rs  logging.rs  main.rs  metrics.rs  metrics_push.rs  parquet_out.rs  pipeline.rs  rate_limiter.rs  server.rs  storage.rs  tasks.rs  types.rs
src/apis/: barboza.rs  blue_moon.rs  darrells_tavern.rs  kexp.rs  mod.rs  neumos.rs  sea_monster.rs  sunset_tavern.rs
src/app/: conflation_use_case.rs  enrich_use_case.rs  ingest_use_case.rs  mod.rs  normalize_use_case.rs  ports.rs  quality_gate_use_case.rs
src/common/: constants.rs  error.rs  mod.rs  types.rs
src/domain/: mod.rs
src/gateway/: cas_supabase.rs  ingest_log.rs  mod.rs
src/graphql/: loaders.rs  mod.rs  schema.rs
src/infra/: cadence_adapter.rs  conflation_output_adapter.rs  enrich_output_adapter.rs  gateway_adapter.rs  http_client.rs  mod.rs  normalize_output_adapter.rs  parser_factory.rs  payload_store.rs  (+3 more)
tests/: envelope_schema_tests.rs  integration_test.rs  kexp_scraper_test.rs
web-server/: Cargo.toml
web-server/src/: graphql.rs  handlers.rs  main.rs  models.rs  router.rs  state.rs  templates.rs
web-server/templates/: artist.html  events_list.html  index.html
(+76 files in other folders)
