[package]
name = "sms_scraper"
version = "0.1.0"
edition = "2021"
description = "Rust-based event data scraper for Seattle Music Scene"
autobins = false

[[bin]]
name = "sms_scraper"
path = "src/main.rs"

[[bin]]
name = "build-dashboard"
path = "src/bin/build-dashboard.rs"


[dependencies]
# Async runtime and HTTP client
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Database - Turso/libSQL (optional, behind the `db` feature to keep builds small)
libsql = { version = "0.4", optional = true }

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# HTML parsing for crawlers
scraper = "0.19"
select = "0.6"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "local-time"] }
tracing-appender = "0.2"

# Environment variables
dotenv = "0.15"

# Command line interface
clap = { version = "4.0", features = ["derive"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Async traits
async-trait = "0.1"

# GraphQL (pin to v6 to avoid edition 2024 requirement)
async-graphql = { version = "6.0", features = ["chrono"] }
async-graphql-axum = "6.0"
# Axum 0.7 is compatible with async-graphql v6
axum = { version = "0.7", features = ["json", "query", "tokio"] }
tower = "0.4"
# tower-http 0.5 works with axum 0.7
tower-http = { version = "0.5", features = ["cors"] }

# JSON Schema validation
jsonschema = "0.17"

# Crypto and utilities for CAS/idempotency
sha2 = "0.10"
hex = "0.4"

# Local SQLite for ingest metadata (dedupe, offsets)
rusqlite = { version = "0.31", features = ["bundled"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.13"

# For lazy static metric catalog
once_cell = "1.19"

[features]
# Default build excludes database (Turso/libSQL) to minimize image size and build time.
default = []
# Enable Turso/libSQL-backed storage and related modules
db = ["libsql"]


