[workspace]
members = [
    "sms-core",
    "sms-scraper", 
    "sms-graphql",
    "sms-web"
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across all workspace members
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"

# Database
libsql = "0.4"

# HTTP/Web
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
axum = "0.7"
tower = "0.4"