[package]
name = "sms-scraper"
version = "0.1.0"
edition = "2021"
description = "Full SMS scraper with all crawlers and processing pipeline"

[features]
default = ["scraping", "db"]
scraping = []
db = []

[dependencies]
sms-core = { path = "../sms-core", features = ["db", "http"] }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
async-trait = { workspace = true }

# HTTP client for scraping
reqwest = { workspace = true, features = ["blocking", "gzip", "deflate"] }

# HTML parsing for crawlers
scraper = "0.19"
select = "0.6"
regex = "1.10"

# Configuration
toml = "0.8"
dotenv = "0.15"

# CLI
clap = { version = "4.0", features = ["derive"] }

# JSON Schema validation
jsonschema = "0.17"

# Crypto for content addressing
sha2 = "0.10"
hex = "0.4"

# SQLite for local metadata
rusqlite = { package = "libsql-rusqlite", version = "0.31" }

# Metrics
metrics = "0.23"
metrics-exporter-prometheus = "0.13"
once_cell = "1.19"


[dev-dependencies]
tempfile = { workspace = true }