[package]
name = "sms_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Database
libsql = { version = "0.4.0", optional = true }

# Async runtime 
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# GraphQL types (lightweight)
async-graphql = { version = "6.0", default-features = false, features = ["uuid", "chrono"] }

# Async trait support
async-trait = "0.1"

# Logging
tracing = "0.1"

# Optional features
[features]
default = []
database = ["libsql"]